# capnpc-abstract

./: Cargo.toml
capnpc-abstract-rust/: Cargo.toml
capnpc-abstract-rust/src/: main.rs
capnpc-abstract-rust/src/rust/: ast.rs  mod.rs
capnpc-idiomatic-cpp/: Cargo.toml
capnpc-idiomatic-cpp/src/: main.rs
capnpc-idiomatic-cpp/src/cpp/: ast.rs  codegen.rs  mod.rs  translator.rs
capnpc-idiomatic-cpp/src/cpp/codegen/: header.rs  implementation.rs  mod.rs  serde_header.rs  serde_implementation.rs
capnpc-idiomatic-rust/: Cargo.toml
capnpc-idiomatic-rust/src/: main.rs
capnpc-idiomatic-rust/src/rust/: ast.rs  mod.rs
parser/: Cargo.toml  build.rs
parser/src/: ast.rs  lib.rs  schema_capnp.rs
src/: main.rs
src/parser/: ast.rs  mod.rs
