[package]
name = "capnpc-idiomatic-rust"
version = "0.1.0"
authors = ["mohaque <44129090+mohaque0@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.12.1"
derive_more = "0.99.5"
getset = "0.1.0"
indoc = "0.3"
multimap = "0.8.1"
parser = { path = "../parser" }
